--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+li {
+  list-style-type: none;
+}
+
+.home {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
